--- a/pre_tasks/osx/main.yml
+++ b/pre_tasks/osx/main.yml
@@ -3,8 +3,10 @@
   homebrew:
     name: bash
     state: latest
+  become: false
 
 - name: "ensure openssh (brew version) is installed"
   homebrew:
     name: openssh
     state: latest
+  become: false
