--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,9 @@ home = "/opt/one/onesetup"
 roles_path = "./roles"
 inventory = "./inventory.ini"
 
+[privilege_escalation]
+become_user = "root"
+
 [colors]
 debug = "purple"
 console_prompt = "white"
